# ubuntu-config

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  init.yml  pyproject.toml  requirements.yml  update-from-current-settings.yml
inventory/: inventory.yml
inventory/group_vars/: all.yml
inventory/host_vars/: localhost.yml
roles/bash/files/: prompt.sh
roles/bash/tasks/: main.yml
roles/desktop/tasks/: main.yml
roles/desktop/templates/: Downloads.desktop.j2
roles/dotfiles/files/: .gitconfig  .psqlrc  htoprc
roles/dotfiles/files/direnv/: direnvrc
roles/dotfiles/files/dotfiles/: .p10k.zsh  .screenrc  .tigrc  .tmux.conf  .zshrc
roles/dotfiles/files/nautilus/: bookmarks
roles/dotfiles/tasks/: main.yml
roles/fonts/defaults/: main.yml
roles/fonts/handlers/: main.yml
roles/fonts/tasks/: main.yml
roles/gnome/: README.md
roles/gnome/handlers/: main.yml
roles/gnome/tasks/: get_extension_info.yml  install.yml  main.yml
roles/gnome/tasks/config/: system_monitor_next.yml
roles/keyboard/tasks/: main.yml
roles/keyboard_shortcuts/tasks/: main.yml
roles/nautilus/tasks/: main.yml
roles/nemo/tasks/: main.yml
roles/nvidia_fan_speed/defaults/: main.yml
roles/nvidia_fan_speed/files/etc/: curve.json  profile.json
roles/nvidia_fan_speed/handlers/: main.yml
roles/nvidia_fan_speed/tasks/: main.yml
roles/nvidia_fan_speed/templates/: snvctl.service.j2
roles/system/handlers/: main.yml
roles/system/tasks/: main.yml
roles/terminal/tasks/: main.yml
roles/touchpad/tasks/: main.yml
roles/zsh/tasks/: main.yml
(+4 files in other folders)
