[project]
name = "ubuntu-config"
version = "0.1.0"
description = "Ubuntu configuration"
readme = "README.md"
requires-python = "==3.13.13"
dependencies = [
    # Bug with more recent versions of Ansible because of the `sudo-rs` package in Ubuntu 26.04
    # https://github.com/ansible/ansible/pull/86175
    "ansible==11.13.0",
    "ansible-lint>=26.4.0",
]
